# glider

./: .dockerignore  .env.example  CLAUDE.md  README.md  Tiltfile  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/rulesets/: main.json
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.playwright  docker-compose.dev.yaml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: glider.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: DropTestPanel.tsx  EvolutionDashboard.tsx  Layout.tsx  NacaParamsEditor.tsx  ParametricParamsEditor.tsx  ShapeTypeSelector.tsx  VehicleEditor.tsx  VehiclePreview.tsx
frontend/src/components/__tests__/: EvolutionDashboard.test.tsx
frontend/src/hooks/: useTrajectoryPlayback.ts
frontend/src/scene/: buildGliderGeometry.ts
frontend/src/state/: vehicle-store.ts
frontend/src/types/: trajectory.ts  vehicle.ts
notebooks/: walkthrough_v1.ipynb
src/glider/: __init__.py  constants.py  database.py  optimization.py  pipeline.py  surface.py  vehicle.py  visualization.py
src/glider/serving/: factory.py  schema.py  server.py
src/glider/shapes/: __init__.py  base.py  naca.py  parametric.py  point_cloud.py
tests/: test_evolution_api.py  test_optimization.py  test_shapes.py  test_vehicle.py  test_visualize.py
(+3 files in other folders)
