[project]
name = "glider"
version = "0.2.0"
readme = "README.md"
description = "An evolutionary glider simulator"
authors = [
  { name = "Luan van Pletsen", email = "luanvanpletsen@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "mediapy",
  "mujoco",
  "pandas",
  "trimesh",
  "pygad",
  "fastapi",
  "uvicorn",
  "pymongo",
  "Pillow",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry]
name = "glider"
version = "0.2.0"
description = "An evolutionary glider simulator"
authors = ["Luan van Pletsen <luanvanpletsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.21.2"
mediapy = "1.1.9"
mujoco = "2.3.7"
pandas = "^1.3.3"
trimesh = "^3.9.28"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
ruff = ">=0.4.0"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
